[gd_scene load_steps=6 format=2]

[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUITheme_smaller.tres" type="Theme" id=2]
[ext_resource path="res://Info.gd" type="Script" id=3]
[ext_resource path="res://Player/player_blue_skin.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Assets/simplenote.png" type="Texture" id=5]

[node name="GUI" type="CanvasLayer"]

[node name="Info" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Info"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -153.0
margin_top = -16.0
margin_right = -4.0
custom_constants/separation = 3
alignment = 2

[node name="TextureRect" type="TextureRect" parent="Info/HBoxContainer2"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 5 )

[node name="TrackLabel" type="Label" parent="Info/HBoxContainer2"]
margin_left = 19.0
margin_top = 1.0
margin_right = 92.0
margin_bottom = 14.0
text = "Current Track:"

[node name="ArtistLabel" type="Label" parent="Info/HBoxContainer2"]
margin_left = 95.0
margin_top = 1.0
margin_right = 149.0
margin_bottom = 14.0
text = "by Lucilius"

[node name="HBoxContainer" type="HBoxContainer" parent="Info"]
anchor_right = 1.0
margin_left = 18.0
margin_bottom = 13.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Info/HBoxContainer"]
position = Vector2( -4, 15 )
frames = ExtResource( 4 )
animation = "jump"
playing = true
flip_h = true

[node name="GloppieLabel" type="Label" parent="Info/HBoxContainer"]
margin_right = 37.0
margin_bottom = 13.0
text = "Gloppie"

[node name="PauseMenu" parent="." instance=ExtResource( 1 )]
visible = false

[connection signal="ready" from="Info" to="Info" method="_on_Info_ready"]
